# news-spanifier

./: pyproject.toml
src/news_agent/: config.yaml  main.py
