[project]
name = "news-agent"
version = "0.1.0"
description = "Minimal news-fetching agent using OpenAI web tool"
requires-python = ">=3.10"

dependencies = [
    "openai>=1.58.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0"
]

[project.scripts]
news-agent = "news_agent.main:main"

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"